# templates

./: README.md
c/: CMakeLists.txt  README.md
c-lua/: CMakeLists.txt  README.md
c-lua-sdl2/: CMakeLists.txt  README.md
c-lua-sdl2/include/: lua_wrapper.h  utils.h
c-lua-sdl2/lua/: draw.lua  settings.lua
c-lua-sdl2/src/: lua_wrapper.c  main.c  utils.c
c-lua/lua/: example-file-read.lua  example-function-args.lua  example-function.lua
c-lua/src/: main.c
c/cmake/: run.cmake
c/src/: main.c
clang/: Makefile  README.md
clang/lib/: hello-lib.c
clang/lib/include/: hello-lib.h
clang/src/: main.c
common-lisp/: Makefile  README.md  build.lisp  template.asd  test.lisp
common-lisp/examples/: cond.lisp  hello-world.lisp  list.lisp  math.lisp  struct.lisp
common-lisp/src/: main.lisp
common-lisp/test/: main.lisp
cpp/: CMakeLists.txt  README.md
docker/: Dockerfile  Makefile  README.md
docker/scripts/: entrypoint.sh
ghdl/: .gitignore  Makefile  README  out.gwh
ghdl/src/: pwm.vhd
ghdl/test/: pwm_tb.vhd
git-hooks/: README.md  config.sh  example.c
git-hooks/hooks/: commit-msg.py  pre-commit.sh  update.py
go/: Makefile  README.md  go.mod
go/cmd/: main.go
go/cmd/greetings/: greetings.go
go/cmd/hello/: hello.go
gtest-bazel/: .gitignore  README.md  WORKSPACE  build.py  test.py
gtest-bazel/main/: .gitignore  BUILD
gtest-bazel/main/include/: hello-other.h
gtest-bazel/main/lib/: hello-lib.c
gtest-bazel/main/lib/include/: hello-lib.h
gtest-bazel/main/src/: hello-other.c  main.c
gtest-bazel/test/: .gitignore  BUILD
gtest-bazel/test/src/: hello-test.cc
gtest-cmake/: .gitignore  CMakeLists.txt  README.md
gtest-cmake/cmake/: debug.cmake  docs.cmake
gtest-cmake/docs/: Doxyfile
gtest-cmake/include/: hello-inc.h
gtest-cmake/lib/: hello-lib.c
gtest-cmake/lib/include/: hello-lib.h
gtest-cmake/src/: hello-src.c  main.c
gtest-cmake/test/: .gitignore  CMakeLists.txt  test.py
gtest-cmake/test/cmake/: clean.cmake  coverage.cmake  dependencies.cmake  gtest-build.cmake  gtest-download.cmake  test.cmake
gtest-cmake/test/docs/: Doxyfile
gtest-cmake/test/src/: hello-test.cc  hello-test_f.cc  hello-test_p.cc
haskell/: .gitignore  .travis.yml  Makefile  README.md  haskell-template.cabal  package.yaml  stack.yaml
haskell/cabal/: haskell-template-example.cabal
java-gradle/: .gitignore  Makefile  README.md  settings.gradle
java-gradle/app/: build.gradle
java-gradle/app/src/main/java/java/gradle/template/: App.java
java-gradle/app/src/test/java/java/gradle/template/: AppTest.java
jenkins-cmake/: .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md
jenkins-cmake/project/: CMakeLists.txt
jenkins-cmake/project/cmake/: test1.cmake  test2.cmake
jenkins-docker/: Jenkinsfile  Makefile  README.md
jenkins-docker/scripts/: helloworld.groovy
latex/: Makefile  README.md
leet/: .gitignore  README.md  main.py
leet/tests/: unit_test.py
lua/: Makefile  README.md
lua/src/: project.lua
open-mpi/: .gitignore  CMakeLists.txt  README.md  config  hostfile
open-mpi/src/: all_avg.cpp  avg.cpp  check_status.cpp  compare_bcast.cpp  my_bcast.cpp  ping_pong.cpp  probe.cpp  random_walk.cpp  ring.cpp  send_recv.cpp
pytest/: Makefile  README.md  main.py
pytest/tests/: unit_test.py
python/: .gitignore  Makefile  README.md  requirements.txt  setup.py
python-cffi/: .gitignore  Makefile  README.md  compile.py  main.py
python-cffi/backend/: .gitignore  CMakeLists.txt  Makefile  main.cpp
python-cffi/backend/cmake/: gdb.cmake  run.cmake
python-cffi/tests/: .gitignore  example_test.py
python/project/: __main__.py  core.py
python/tests/: unit_test.py
rust/: .gitignore  Cargo.toml  README.md
rust/src/: main.rs
rust/tests/: test.rs
travis-ci/: .travis.yml  README.md
travis-ci/project/: .gitignore  CMakeLists.txt
travis-ci/project/src/: main.cpp
